--- a/peer_review.html
+++ b/peer_review.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-05-25</td><td>chromium</td><td><a href='https://codereview.chromium.org/2909473002'>Moved DummyFrameOwner class to WeblocalFrameimpl.cpp</a></td><td><a href='https://codereview.chromium.org/user/Uzair'>uzair.jaleel</a></td><td>newbie</td></tr>
 <tr><td>2017-05-24</td><td>chromium</td><td><a href='https://codereview.chromium.org/2904783003'>Allow user to select text in Settings UI</a></td><td><a href='https://codereview.chromium.org/user/Gaja'>gajendra.n</a></td><td>author</td></tr>
 <tr><td>2017-05-24</td><td>chromium</td><td><a href='https://codereview.chromium.org/2902503002'>[Payment] should show all accepted card icon in payment editor.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-05-24</td><td>chromium</td><td><a href='https://codereview.chromium.org/2902503002'>[Payment] should show all accepted card icon in payment editor.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
