--- a/peer_review.html
+++ b/peer_review.html
@@ -14,6 +14,7 @@
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
 <tr><td>2017-05-31</td><td>chromium</td><td><a href='https://codereview.chromium.org/2905823002'>Add Mojo interfaces for GpuJpegDecodeAccelerator and GpuJpegDecodeAcceleratorHost</a></td><td><a href='https://codereview.chromium.org/user/Chandan'>c.padhi</a></td><td>newbie</td></tr>
+<tr><td>2017-05-31</td><td>chromium</td><td><a href='https://codereview.chromium.org/2912383002'>Add support for Element.getAttributeNames()</a></td><td><a href='https://codereview.chromium.org/user/Shanmuga Pandi'>shanmuga.m</a></td><td>author</td></tr>
 <tr><td>2017-05-31</td><td>chromium</td><td><a href='https://codereview.chromium.org/2906883002'>Setting Proper values to HTMLOptionElement DirtyFlag</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
 <tr><td>2017-05-30</td><td>chromium</td><td><a href='https://codereview.chromium.org/2902503002'>[Payment] should show all accepted card icon in payment editor.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-05-30</td><td>chromium</td><td><a href='https://codereview.chromium.org/2902503002'>[Payment] should show all accepted card icon in payment editor.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
