--- a/reviews_non_committers.html
+++ b/reviews_non_committers.html
@@ -13,9 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-06-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2923773002'>Fix include guards in //device/usb</a></td><td><a href='https://codereview.chromium.org/user/nravi.n'>nravi.n</a></td><td>newbie</td></tr>
+<tr><td>2017-06-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895273002'>Adding BufferToTextureTargetMap for Browser Process</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
 <tr><td>2017-06-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2924573002'>WIP: Convert accelerated JPEG Decoder IPC to Mojo</a></td><td><a href='https://codereview.chromium.org/user/Chandan'>c.padhi</a></td><td>newbie</td></tr>
 <tr><td>2017-06-05</td><td>chromium</td><td><a href='https://codereview.chromium.org/2663693002'>Add listener for AdapterDiscoveringChanged on BT chooser-controller</a></td><td><a href='https://codereview.chromium.org/user/deejay'>djmix.kim</a></td><td>author</td></tr>
-<tr><td>2017-06-05</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895273002'>Adding BufferToTextureTargetMap for Browser Process</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
 <tr><td>2017-06-05</td><td>chromium</td><td><a href='https://codereview.chromium.org/2902503002'>[Payment] should show all accepted card icon in payment editor.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-05</td><td>chromium</td><td><a href='https://codereview.chromium.org/2902503002'>[Payment] should show all accepted card icon in payment editor.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-05</td><td>chromium</td><td><a href='https://codereview.chromium.org/2918033003'>Input type check comparision should be an ASCII case-insensitive match.</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
