--- a/peer_review.html
+++ b/peer_review.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-06-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2925783002'>[XMLHttpRequest] Filter forbidden response headers.</a></td><td><a href='https://codereview.chromium.org/user/Raveendra Karu'>r.karu</a></td><td>newbie</td></tr>
 <tr><td>2017-06-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895273002'>Adding BufferToTextureTargetMap for Browser Process</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
 <tr><td>2017-06-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2918033003'>Input type check comparision should be an ASCII case-insensitive match.</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
 <tr><td>2017-06-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2923773002'>Fix include guards in //device/usb</a></td><td><a href='https://codereview.chromium.org/user/nravi.n'>nravi.n</a></td><td>newbie</td></tr>
