--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2902503002'>[Payment] should show all accepted card icon in payment editor.</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-06-05</td><td>chromium</td><td><a href='https://codereview.chromium.org/2920093002'>[css-typed-om] use DOMMatrix::Create() instead of fromMatrix().</a></td><td>hs1217.lee</td></tr>
 <tr><td>2017-06-04</td><td>chromium</td><td><a href='https://codereview.chromium.org/2920723002'>Use ContainsValue() instead of std::find() in chromecast/</a></td><td>tripta.g</td></tr>
 <tr><td>2017-06-02</td><td>chromium</td><td><a href='https://codereview.chromium.org/2907973002'>[css-typed-om] add toMatrix() method in CSSTransformValue.idl</a></td><td>hs1217.lee</td></tr>
