--- a/reviews_non_committers.html
+++ b/reviews_non_committers.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-06-07</td><td>chromium</td><td><a href='https://codereview.chromium.org/2926043002'>Rename PlainText::end() to PlainText::End()</a></td><td><a href='https://codereview.chromium.org/user/Shanmuga Pandi'>shanmuga.m</a></td><td>author</td></tr>
 <tr><td>2017-06-07</td><td>chromium</td><td><a href='https://codereview.chromium.org/2925693003'>Making CSD ReportType enum consistent.</a></td><td><a href='https://codereview.chromium.org/user/nikhil.sahni'>nikhil.sahni</a></td><td>newbie</td></tr>
 <tr><td>2017-06-07</td><td>chromium</td><td><a href='https://codereview.chromium.org/2912383002'>Add support for Element.getAttributeNames()</a></td><td><a href='https://codereview.chromium.org/user/Shanmuga Pandi'>shanmuga.m</a></td><td>author</td></tr>
 <tr><td>2017-06-07</td><td>chromium</td><td><a href='https://codereview.chromium.org/2923773002'>Fix include guards in //device/usb</a></td><td><a href='https://codereview.chromium.org/user/nravi.n'>nravi.n</a></td><td>newbie</td></tr>
