--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-07</td><td>chromium</td><td><a href='https://codereview.chromium.org/2918033003'>Input type check comparision should be an ASCII case-insensitive match.</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-06-07</td><td>chromium</td><td><a href='https://codereview.chromium.org/2926043002'>Rename PlainText::end() to PlainText::End()</a></td><td>shanmuga.m</td></tr>
 <tr><td>2017-06-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2903643002'>PaymentHandler: Implement PaymentRequestEvent constructor.</a></td><td>jinho.bang</td></tr>
 <tr><td>2017-06-06</td><td>chromium</td><td><a href='https://codereview.chromium.org/2898223002'>PaymentHandler: Rename PaymentAppRequest with PaymentRequestEventData.</a></td><td>jinho.bang</td></tr>
