--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2924013002'>Rename CreateDragImage to CreateDragImageForFrame to avoid name conflicts</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-06-07</td><td>chromium</td><td><a href='https://codereview.chromium.org/2923773002'>Fix include guards in //device/usb</a></td><td>nravi.n</td></tr>
 <tr><td>2017-06-07</td><td>chromium</td><td><a href='https://codereview.chromium.org/2918033003'>Input type check comparision should be an ASCII case-insensitive match.</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-06-07</td><td>chromium</td><td><a href='https://codereview.chromium.org/2926043002'>Rename PlainText::end() to PlainText::End()</a></td><td>shanmuga.m</td></tr>
