--- a/peer_review.html
+++ b/peer_review.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2919343007'>Check |errorCode| of translate.js and notify to Browser</a></td><td><a href='https://codereview.chromium.org/user/Gaja'>gajendra.n</a></td><td>author</td></tr>
+<tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2930883002'>[geometry] replace m12 with m21 when transform DOMPoint from DOMMatrix.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
+<tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2930883002'>[geometry] replace m12 with m21 when transform DOMPoint from DOMMatrix.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2909473002'>Moved DummyFrameOwner class to WeblocalFrameimpl.cpp</a></td><td><a href='https://codereview.chromium.org/user/Uzair'>uzair.jaleel</a></td><td>newbie</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895273002'>Adding BufferToTextureTargetMap for Browser Process</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2923933004'>[NotForReview] Move GJDAH and GJDA to media/gpu/mojo</a></td><td><a href='https://codereview.chromium.org/user/Chandan'>c.padhi</a></td><td>newbie</td></tr>
