--- a/reviews.html
+++ b/reviews.html
@@ -14,6 +14,9 @@
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2911643002'>Create BUILD.gn files for //media/filters.</a></td><td><a href='https://codereview.chromium.org/user/a.suchit'>a.suchit</a></td><td>committer</td></tr>
+<tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2919343007'>Check |errorCode| of translate.js and notify to Browser</a></td><td><a href='https://codereview.chromium.org/user/Gaja'>gajendra.n</a></td><td>author</td></tr>
+<tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2930883002'>[geometry] replace m12 with m21 when transform DOMPoint from DOMMatrix.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
+<tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2930883002'>[geometry] replace m12 with m21 when transform DOMPoint from DOMMatrix.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2926023002'>[TRY-BOT-CHECK] Adding support for Smart GO NEXT feature in Android Chrome</a></td><td><a href='https://codereview.chromium.org/user/AKVT'>ajith.v</a></td><td>committer</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2909473002'>Moved DummyFrameOwner class to WeblocalFrameimpl.cpp</a></td><td><a href='https://codereview.chromium.org/user/Uzair'>uzair.jaleel</a></td><td>newbie</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895273002'>Adding BufferToTextureTargetMap for Browser Process</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
