--- a/reviews.html
+++ b/reviews.html
@@ -13,8 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2932643005'>Rename avatar_url to icon_url</a></td><td><a href='https://codereview.chromium.org/user/Ravi Nanjundappa'>nravi.n</a></td><td>newbie</td></tr>
 <tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2895273002'>Unified the use of BufferToTextureTargetMap for all the Processes</a></td><td><a href='https://codereview.chromium.org/user/sujith'>sujiths.s</a></td><td>author</td></tr>
-<tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2932643005'>Rename avatar_url to icon_url</a></td><td><a href='https://codereview.chromium.org/user/nravi.n'>nravi.n</a></td><td>newbie</td></tr>
 <tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2911643002'>Create BUILD.gn files for //media/filters.</a></td><td><a href='https://codereview.chromium.org/user/a.suchit'>a.suchit</a></td><td>committer</td></tr>
 <tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2925693003'>Making CSD ReportType enum consistent.</a></td><td><a href='https://codereview.chromium.org/user/nikhil.sahni'>nikhil.sahni</a></td><td>newbie</td></tr>
 <tr><td>2017-06-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2839993002'>[Android] Adding Smart GO/NEXT feature in Chrome</a></td><td><a href='https://codereview.chromium.org/user/AKVT'>ajith.v</a></td><td>committer</td></tr>
